# IST_Viltsev

./: .gitignore  pyproject.toml
application/: Dockerfile  ScraperController.py  app.py  context.py  docker-compose.yml  pyproject.toml  requirements.txt  scraper.py  visitedURL.txt
application/app/: Dockerfile  ScraperController.py  context.py  requirements.txt  scraper.py
application/machineLearning/: MLController.py  background_deletion.py  background_insertion.py  clip_finder.py  delete_duplications.py  find_complementary.py  find_images.py  find_similar_color.py  image_classifier.py
application/machine_learning/: Dockerfile  MLController.py  background_deletion.py  background_insertion.py  clip_finder.py  context.py  find_complementary.py  find_similar_color.py  image_classifier.py  requirements.txt
application/model/: database.py
