[tool.poetry]
name = "mymlproj"
version = "0.1.0"
description = ""
authors = ["Viltsev <94001621+Viltsev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
pydantic = "^2.6.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
